# concraft

./: .gitignore  LICENSE  README.md  changelog  concraft.cabal  stack.yaml
NLP/: Concraft.hs
NLP/Concraft/: Disamb.hs  Format.hs  Guess.hs  Morphosyntax.hs  Plain.hs
NLP/Concraft/Disamb/: Positional.hs  Tiered.hs
NLP/Concraft/Format/: Plain.hs
NLP/Concraft/Morphosyntax/: Base.hs  Compare.hs
config/: nkjp-tagset.cfg
src/NLP/: Concraft.hs
src/NLP/Concraft/: .Guess.hs.swp  Analysis.hs  DAG.hs  DAG2.hs  DAGSeg.hs  Disamb.hs  Format.hs  Guess.hs  Morphosyntax.hs  Schema.hs
src/NLP/Concraft/DAG/: Disamb.hs  DisambSeg.hs  Guess.hs  Morphosyntax.hs  Schema.hs  SchemaDev.hs  Segmentation.hs
src/NLP/Concraft/DAG/Morphosyntax/: Accuracy.hs  Ambiguous.hs
src/NLP/Concraft/Disamb/: Positional.hs  Tiered.hs
src/NLP/Concraft/Format/: Plain.hs  Temp.hs
src/NLP/Concraft/Morphosyntax/: Accuracy.hs  Align.hs  DAG.hs  WMap.hs
tools/: concraft-analyse-model.hs  concraft-disamb.hs  concraft-guess.hs  concraft.hs
